--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,6 @@ on: [workflow_dispatch]
 jobs:
   Provision_VM:
     runs-on: ubuntu-latest
-    container:
-      image: hashicorp/terraform
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -13,6 +11,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - name: Check out repository code
+        uses: hashicorp/setup-terraform@v2        
       - name: Initialize Terraform
         run: terraform init
         working-directory: ./.terraform        
