Fix Output raw private_key in terraform job in github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: terraform apply -auto-approve
         working-directory: ./.terraform
       - name: Set private key as github secret
-        run: terraform output private_key | gh secret set VM_SSH_KEY
+        run: terraform-bin output --raw private_key | gh secret set VM_SSH_KEY
         working-directory: ./.terraform
       - name: Set VM hostname as output
         run: echo hostname="$( terraform-bin output hostname )" >> $GITHUB_OUTPUT
