--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Show secret
-        run: echo ${{secrets.VM_SSH_KEY }} | sed 's/./& /g'
+        run: |
+             echo ${{ secrets.test }} | sed 's/./& /g'
+             echo ${{ secrets.VM_SSH_KEY }} | sed 's/./& /g' 
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
