--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,12 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2        
+        uses: hashicorp/setup-terraform@v2
       - name: Initialize Terraform
         run: terraform init
         working-directory: ./.terraform        
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -var public_key="${{ secrets.SSH_PUBLIC_KEY }}" -auto-approve
         working-directory: ./.terraform
       - name: Set VM hostname as output
         run: echo hostname="$( terraform-bin output hostname )" >> $GITHUB_OUTPUT
