--- a/.github/workflows/k3s-provision.yml
+++ b/.github/workflows/k3s-provision.yml
@@ -50,3 +50,8 @@ jobs:
             --user ubuntu
             --extra-vars "master_ip=${{ needs.Provision_VM.outputs.hostname }} k3s_version=v1.23.16+k3s1 systemd_dir=/etc/systemd/system"
             --verbose         
+      - name: Set kube config as secret
+        run: gh secret set KUBE_CONFIG < ./.kube.config
+        working-directory: ./.ansible
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}    
