--- a/.github/workflows/k3s-provision.yml
+++ b/.github/workflows/k3s-provision.yml
@@ -51,7 +51,11 @@ jobs:
             --extra-vars "master_ip=${{ needs.Provision_VM.outputs.hostname }} k3s_version=v1.23.16+k3s1 systemd_dir=/etc/systemd/system"
             --verbose         
       - name: Set kube config as secret
-        run: gh secret set KUBE_CONFIG < ./.kube.config
+        run: |
+          cat ./.kube.config
+          base64 ./.kube.config > ./.base64.kube.config
+          cat ./.base64.kube.config
+          gh secret set BASE64_KUBE_CONFIG < ./.base64.kube.config
         working-directory: ./.ansible
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}    
