--- a/.github/workflows/k3s-provision.yml
+++ b/.github/workflows/k3s-provision.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
       - name: Initialize Terraform
-        run: terraform init
+        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_BUCKET }}"
         working-directory: ./.terraform        
       - name: Terraform Apply
         run: terraform apply -var public_key="${{ secrets.SSH_PUBLIC_KEY }}" -auto-approve
